@@ -1,5 +1,6 @@
 1.15.2 /
 [Alexandr Topilski]
+- Json rpc for statistic/version
 
 1.15.1 / February 1, 2018
 [Alexandr Topilski]
