@@ -1208,6 +1208,7 @@ SET(SOURCES
   ${SOURCES_GUI}
   ${SOURCES_PROXY}
   ${SOURCES_TRANSLATIONS}
+  ${CMAKE_SOURCE_DIR}/src/server/server_config.cpp
 )
 
 QT5_WRAP_CPP(MOC_FILES ${HEADERS_TOMOC})
