@@ -18,10 +18,7 @@
 
 #include "gui/statistic_sender.h"
 
-#include <common/net/socket_tcp.h>           // for ClientSocketTcp
-#include <common/system_info/system_info.h>  // for SystemInfo, etc
-
-#include <json-c/json_object.h>
+#include <common/net/socket_tcp.h>  // for ClientSocketTcp
 
 #include "server/server_config.h"  // for FASTONOSQL_URL, etc
 
@@ -32,9 +29,9 @@ StatisticSender::StatisticSender(uint32_t exec_count, QObject* parent) : QObject
 
 void StatisticSender::routine() {
 #if defined(FASTONOSQL)
-  common::net::ClientSocketTcp client(common::net::HostAndPort(FASTONOSQL_URL, SERV_STATISTIC_PORT));
+  common::net::ClientSocketTcp client(common::net::HostAndPort(FASTONOSQL_HOST, SERVER_REQUESTS_PORT));
 #elif defined(FASTOREDIS)
-  common::net::ClientSocketTcp client(common::net::HostAndPort(FASTOREDIS_URL, SERV_STATISTIC_PORT));
+  common::net::ClientSocketTcp client(common::net::HostAndPort(FASTOREDIS_HOST, SERVER_REQUESTS_PORT));
 #else
 #error please specify url and port to send statistic information
 #endif
@@ -44,33 +41,42 @@ void StatisticSender::routine() {
     return;
   }
 
-  json_object* stats_json = json_object_new_object();
-  common::system_info::SystemInfo inf = common::system_info::currentSystemInfo();
-
-  json_object* os_json = json_object_new_object();
-  json_object_object_add(os_json, FIELD_OS_NAME, json_object_new_string(inf.GetName().c_str()));
-  json_object_object_add(os_json, FIELD_OS_VERSION, json_object_new_string(inf.GetVersion().c_str()));
-  json_object_object_add(os_json, FILED_OS_ARCH, json_object_new_string(inf.GetArch().c_str()));
-  json_object_object_add(stats_json, FIELD_OS, os_json);
-
-  json_object* project_json = json_object_new_object();
-  json_object_object_add(project_json, FIELD_PROJECT_NAME, json_object_new_string(PROJECT_NAME));
-  json_object_object_add(project_json, FIELD_PROJECT_VERSION, json_object_new_string(PROJECT_VERSION));
-  json_object_object_add(project_json, FILED_PROJECT_ARCH, json_object_new_string(PROJECT_ARCH));
-#ifndef IS_PUBLIC_BUILD
-  json_object_object_add(project_json, FIELD_OWNER, json_object_new_string(USER_SPECIFIC_ID));
-#endif
-  json_object_object_add(project_json, FIELD_PROJECT_EXEC_COUNT,
-                         json_object_new_int64(static_cast<int64_t>(exec_count_)));
-  json_object_object_add(stats_json, FIELD_PROJECT, project_json);
-
-  const char* stats_json_string = json_object_get_string(stats_json);
-
   size_t nwrite = 0;
-  err = client.Write(stats_json_string, strlen(stats_json_string), &nwrite);
-  json_object_put(stats_json);
+  std::string request = server::SendStatisticRequest(exec_count_);
+  err = client.Write(request.c_str(), request.size(), &nwrite);
+  if (err) {
+    emit statisticSended(false);
+    err = client.Close();
+    if (err) {
+      DNOTREACHED();
+    }
+    return;
+  }
 
-  emit statisticSended(err ? false : true);
+  char stat_reply[256] = {0};
+  size_t nread = 0;
+  err = client.Read(stat_reply, sizeof(stat_reply), &nread);
+  if (err) {
+    emit statisticSended(false);
+    err = client.Close();
+    if (err) {
+      DNOTREACHED();
+    }
+    return;
+  }
+
+  bool is_sent;
+  common::Error parse_error = server::ParseSendStatisticResponce(std::string(stat_reply, nread), &is_sent);
+  if (parse_error) {
+    emit statisticSended(false);
+    err = client.Close();
+    if (err) {
+      DNOTREACHED();
+    }
+    return;
+  }
+
+  emit statisticSended(is_sent);
   err = client.Close();
   DCHECK(!err) << "Close client error: " << err->GetDescription();
 }
