@@ -1,22 +1,20 @@
 #pragma once
 
-#define SERV_VERSION_PORT 5001
-#define SERV_STATISTIC_PORT SERV_VERSION_PORT
+#include <common/error.h>
 
-#define GET_FASTONOSQL_VERSION "VERSION"
-#define GET_FASTOREDIS_VERSION "VERSION"
+#define SERVER_REQUESTS_PORT 5001
 
-#define FASTONOSQL_URL "fastonosql.com"
-#define FASTOREDIS_URL "fastoredis.com"
+#define FASTONOSQL_HOST "fastonosql.com"
+#define FASTOREDIS_HOST "fastoredis.com"
 
-#define FIELD_OS "os"
-#define FIELD_OS_NAME "name"
-#define FIELD_OS_VERSION "version"
-#define FILED_OS_ARCH "arch"
+namespace fastonosql {
+namespace server {
 
-#define FIELD_PROJECT "project"
-#define FIELD_PROJECT_NAME "name"
-#define FIELD_PROJECT_VERSION "version"
-#define FILED_PROJECT_ARCH "arch"
-#define FIELD_OWNER "owner"
-#define FIELD_PROJECT_EXEC_COUNT "exec_count"
+std::string GetVersionRequest();
+common::Error ParseVersionResponce(const std::string& data, std::string* version_str);
+
+std::string SendStatisticRequest(uint32_t exec_count);
+common::Error ParseSendStatisticResponce(const std::string& data, bool* is_sent);
+
+}  // namespace server
+}  // namespace fastonosql
