@@ -1,5 +1,6 @@
 1.16.2 /
 [Alexandr Topilski]
+- Json rpc for statistic/version
 
 1.16.1 / February 1, 2018
 [Alexandr Topilski]
